--- a/src/_tpl_forms_select2.html
+++ b/src/_tpl_forms_select2.html
@@ -18,25 +18,25 @@
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label for="form-clear-c-select">Селект - значение не выбрано:</label>
-			<select class="cselect field-effects-js" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select">
+			<select class="cselect field-js" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label for="form-clear-c-select-fit">Селект - значение выбрано по умолчанию:</label>
-			<select class="cselect field-effects-js" name="select-name" id="form-clear-c-select-fit">
+			<select class="cselect field-js" name="select-name" id="form-clear-c-select-fit">
 				@@include('_tpl_forms_form-select-options.html', {"placeholder":"false"})
 			</select>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label class="error" for="form-clear-c-select-err">Селект - невалидный :</label>
-			<select class="cselect field-effects-js error" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select-err">
+			<select class="cselect field-js error" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select-err">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label class="success" for="form-clear-c-select-suc">Селект - валидный:</label>
-			<select class="cselect field-effects-js success" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select-suc">
+			<select class="cselect field-js success" data-placeholder="- Выбрать -" name="select-name" id="form-clear-c-select-suc">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
@@ -62,13 +62,13 @@
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label for="form-clear-c-mSelect">Селект - значение не выбрано:</label>
-			<select class="cselect field-effects-js" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect">
+			<select class="cselect field-js" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label for="form-clear-c-mSelect-fit">Селект - значение выбрано по умолчанию:</label>
-			<select class="cselect field-effects-js" name="select-name" multiple id="form-clear-c-mSelect-fit">
+			<select class="cselect field-js" name="select-name" multiple id="form-clear-c-mSelect-fit">
 				<option value="1">Размер</option>
 				<option value="2" selected>Вес</option>
 				<option value="3">Цвет</option>
@@ -81,13 +81,13 @@
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label class="error" for="form-clear-c-mSelect-err">Селект - невалидный :</label>
-			<select class="cselect field-effects-js error" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect-err">
+			<select class="cselect field-js error" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect-err">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label class="success" for="form-clear-c-mSelect-suc">Селект - валидный:</label>
-			<select class="cselect field-effects-js success" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect-suc">
+			<select class="cselect field-js success" data-placeholder="- Выбрать -" name="select-name" multiple id="form-clear-c-mSelect-suc">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
@@ -126,7 +126,7 @@
 					<label for="form-cover-c-select">Селект - значение не выбрано:</label>
 				</div>
 				<div class="input-holder">
-					<select class="cselect field-effects-js" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select">
+					<select class="cselect field-js" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -138,7 +138,7 @@
 					<label for="form-cover-c-select-fit">Селект - значение выбрано по умолчанию:</label>
 				</div>
 				<div class="input-holder">
-					<select class="cselect field-effects-js" name="select-name" id="form-cover-c-select-fit">
+					<select class="cselect field-js" name="select-name" id="form-cover-c-select-fit">
 						@@include('_tpl_forms_form-select-options.html', {"placeholder":"false"})
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -150,7 +150,7 @@
 					<label class="error" for="form-cover-c-select-err">Селект - невалидный :</label>
 				</div>
 				<div class="input-holder">
-					<select class="cselect field-effects-js error" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select-err">
+					<select class="cselect field-js error" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select-err">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -162,7 +162,7 @@
 					<label class="success" for="form-cover-c-select-suc">Селект - валидный:</label>
 				</div>
 				<div class="input-holder">
-					<select class="cselect field-effects-js success" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select-suc">
+					<select class="cselect field-js success" data-placeholder="- Выбрать -" name="select-name" id="form-cover-c-select-suc">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -200,7 +200,7 @@
 					<label for="form-cover-c-mSelect">Селект - значение не выбрано:</label>
 				</div>
 				<div class="input-holder">
-					<select class="cselect field-effects-js" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect">
+					<select class="cselect field-js" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -212,7 +212,7 @@
 					<label for="form-cover-c-mSelect-fit">Селект - значение выбрано по умолчанию:</label>
 				</div>
 				<div class="input-holder">
-					<select class="cselect field-effects-js" name="select-name" multiple id="form-cover-c-mSelect-fit">
+					<select class="cselect field-js" name="select-name" multiple id="form-cover-c-mSelect-fit">
 						<option value="1">Размер</option>
 						<option value="2" selected>Вес</option>
 						<option value="3">Цвет</option>
@@ -231,7 +231,7 @@
 					<label class="error" for="form-cover-c-mSelect-err">Селект - невалидный :</label>
 				</div>
 				<div class="input-holder">
-					<select class="cselect field-effects-js error" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect-err">
+					<select class="cselect field-js error" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect-err">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -243,7 +243,7 @@
 					<label class="success" for="form-cover-c-mSelect-suc">Селект - валидный:</label>
 				</div>
 				<div class="input-holder">
-					<select class="cselect field-effects-js success" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect-suc">
+					<select class="cselect field-js success" data-placeholder="- Выбрать -" name="select-name" multiple id="form-cover-c-mSelect-suc">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
