--- a/src/_tpl_forms_selects.html
+++ b/src/_tpl_forms_selects.html
@@ -15,25 +15,25 @@
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label for="form-clear-select">Селект - значение не выбрано:</label>
-			<select class="field-effects-js" name="select-name" id="form-clear-select">
+			<select class="field-js" name="select-name" id="form-clear-select">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label for="form-clear-select-fit">Селект - значение выбрано по умолчанию:</label>
-			<select class="field-effects-js" name="select-name" id="form-clear-select-fit">
+			<select class="field-js" name="select-name" id="form-clear-select-fit">
 				@@include('_tpl_forms_form-select-options.html', {"placeholder":"false"})
 			</select>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label class="error" for="form-clear-select-err">Селект - невалидный :</label>
-			<select class="field-effects-js error" name="select-name" id="form-clear-select-err">
+			<select class="field-js error" name="select-name" id="form-clear-select-err">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
 			<!--===================================================-->
 			<label class="success" for="form-clear-select-suc">Селект - валидный:</label>
-			<select class="field-effects-js success" name="select-name" id="form-clear-select-suc">
+			<select class="field-js success" name="select-name" id="form-clear-select-suc">
 				@@include('_tpl_forms_form-select-options.html')
 			</select>
 			@@include('_tpl_forms_form-validation.html')
@@ -67,7 +67,7 @@
 			<!--===================================================-->
 			<label for="form-clear-select-arr">Селект - значение не выбрано:</label>
 			<div class="select">
-				<select class="field-effects-js" name="select-name" id="form-clear-select-arr">
+				<select class="field-js" name="select-name" id="form-clear-select-arr">
 					@@include('_tpl_forms_form-select-options.html')
 				</select>
 				@@include('_tpl_forms_form-validation.html')
@@ -75,7 +75,7 @@
 			<!--===================================================-->
 			<label for="form-clear-select-arr-fit">Селект - значение выбрано по умолчанию:</label>
 			<div class="select">
-				<select class="field-effects-js" name="select-name" id="form-clear-select-arr-fit">
+				<select class="field-js" name="select-name" id="form-clear-select-arr-fit">
 					@@include('_tpl_forms_form-select-options.html', {"placeholder":"false"})
 				</select>
 				@@include('_tpl_forms_form-validation.html')
@@ -83,7 +83,7 @@
 			<!--===================================================-->
 			<label class="error" for="form-clear-select-arr-err">Селект - невалидный :</label>
 			<div class="select">
-				<select class="field-effects-js error" name="select-name" id="form-clear-select-arr-err">
+				<select class="field-js error" name="select-name" id="form-clear-select-arr-err">
 					@@include('_tpl_forms_form-select-options.html')
 				</select>
 				@@include('_tpl_forms_form-validation.html')
@@ -91,7 +91,7 @@
 			<!--===================================================-->
 			<label class="success" for="form-clear-select-arr-suc">Селект - валидный:</label>
 			<div class="select">
-				<select class="field-effects-js success" name="select-name" id="form-clear-select-arr-suc">
+				<select class="field-js success" name="select-name" id="form-clear-select-arr-suc">
 					@@include('_tpl_forms_form-select-options.html')
 				</select>
 				@@include('_tpl_forms_form-validation.html')
@@ -129,7 +129,7 @@
 					<label for="form-cover-select">Селект - значение не выбрано:</label>
 				</div>
 				<div class="input-holder">
-					<select class="field-effects-js" name="select-name" id="form-cover-select">
+					<select class="field-js" name="select-name" id="form-cover-select">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -141,7 +141,7 @@
 					<label for="form-cover-select-fit">Селект - значение выбрано по умолчанию:</label>
 				</div>
 				<div class="input-holder">
-					<select class="field-effects-js" name="select-name" id="form-cover-select-fit">
+					<select class="field-js" name="select-name" id="form-cover-select-fit">
 						@@include('_tpl_forms_form-select-options.html', {"placeholder":"false"})
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -153,7 +153,7 @@
 					<label class="error" for="form-cover-select-err">Селект - невалидный :</label>
 				</div>
 				<div class="input-holder">
-					<select class="field-effects-js error" name="select-name" id="form-cover-select-err">
+					<select class="field-js error" name="select-name" id="form-cover-select-err">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -165,7 +165,7 @@
 					<label class="success" for="form-cover-select-suc">Селект - валидный:</label>
 				</div>
 				<div class="input-holder">
-					<select class="field-effects-js success" name="select-name" id="form-cover-select-suc">
+					<select class="field-js success" name="select-name" id="form-cover-select-suc">
 						@@include('_tpl_forms_form-select-options.html')
 					</select>
 					@@include('_tpl_forms_form-validation.html')
@@ -211,7 +211,7 @@
 				</div>
 				<div class="input-holder">
 					<div class="select">
-						<select class="field-effects-js" name="select-name" id="form-cover-select-arr">
+						<select class="field-js" name="select-name" id="form-cover-select-arr">
 							@@include('_tpl_forms_form-select-options.html')
 						</select>
 						@@include('_tpl_forms_form-validation.html')
@@ -225,7 +225,7 @@
 				</div>
 				<div class="input-holder">
 					<div class="select">
-						<select class="field-effects-js" name="select-name" id="form-cover-select-arr-fit">
+						<select class="field-js" name="select-name" id="form-cover-select-arr-fit">
 							@@include('_tpl_forms_form-select-options.html', {"placeholder":"false"})
 						</select>
 						@@include('_tpl_forms_form-validation.html')
@@ -239,7 +239,7 @@
 				</div>
 				<div class="input-holder">
 					<div class="select">
-						<select class="field-effects-js error" name="select-name" id="form-cover-select-arr-err">
+						<select class="field-js error" name="select-name" id="form-cover-select-arr-err">
 							@@include('_tpl_forms_form-select-options.html')
 						</select>
 						@@include('_tpl_forms_form-validation.html')
@@ -253,7 +253,7 @@
 				</div>
 				<div class="input-holder">
 					<div class="select">
-						<select class="field-effects-js success" name="select-name" id="form-cover-select-arr-suc">
+						<select class="field-js success" name="select-name" id="form-cover-select-arr-suc">
 							@@include('_tpl_forms_form-select-options.html')
 						</select>
 						@@include('_tpl_forms_form-validation.html')
