--- a/src/_tpl_layout_head.html
+++ b/src/_tpl_layout_head.html
@@ -34,7 +34,7 @@
 	<!--Modernizr-->
 	<script src="js/modernizr.min.js"></script>
 </head>
-<body @@if (pageClass !== "") {class="@@pageClass"}>
+<body@@if(context.pageClass){ class="@@pageClass"}>
 <noscript><div class="no-js-warning">Для корректной работы сайта <b>включите JavaScript</b> в браузере</div></noscript>
 <!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 <!-- >>> head.tpl END <<< -->
